--- a/application/modules/default/views/scripts/proyecto/relacion.phtml
+++ b/application/modules/default/views/scripts/proyecto/relacion.phtml
@@ -15,5 +15,39 @@
     </div>
 </div>
 <div class="span7">
-    
+    <?php if($this->exito) :?>   
+        <div class="alert alert-success">
+            <a class="close" data-dismiss="alert" href="#">&times;</a>
+            <h2>¡Master!</h2> Increible lo que haz hecho, podemos decir que eres buen programador <strong>#oesmuytontoloqueestoydiciendo</strong>
+        </div>        
+    <?php elseif($this->error) :?>
+        <div class="alert alert-error">
+            <a class="close" data-dismiss="alert" href="#">&times;</a>
+            <h2>¡Ups!</h2>No se pudo completar la operación. Verifica manualmente en la base de datos <strong><?php echo $this->datos->basededatos_empresa;?></strong> en la tabla <strong>#<?php echo $this->modulos->nombre_modulo_slug;?></strong>.
+        </div>        
+    <?php endif;?>    
+    <table class="table table-striped table-bordered table-condensed">
+        <thead>
+            <tr>
+                <th>Modulo padre</th>
+                <th>Modulo hijo</th>            
+                <th>Relación</th>
+                <th>Cardinalidad</th>
+                <th class="span1">Acciones</th>            
+            </tr>
+        </thead>
+        <tbody>
+            <?php foreach($this->datosrelacion as $retorno) :?>            
+            <tr>
+                <td><?php echo $retorno->nombre_padre;?></td>
+                <td><?php echo $retorno->nombre_hijo;?></td>
+                <td><?php echo $retorno->nombre_relacion;?></td>
+                <td><?php echo $retorno->nombre_cardinalidad;?></td>
+                <td>
+                    <a class="btn btn-danger btn-mini" href="<?php echo $this->url(array('module'=>'default','controller'=>'proyecto','action'=>'eliminarelacion','id'=>$retorno->id_relacion),'',true);?>">Borrar</a>                
+                </td>
+            </tr>
+            <?php endforeach;?>
+        </tbody>
+    </table>      
 </div>
