--- a/application/modules/default/views/scripts/proyecto/index.phtml
+++ b/application/modules/default/views/scripts/proyecto/index.phtml
@@ -3,7 +3,22 @@
     <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'tablero','action'=>'index'),'',true);?>">Tablero</a> <span class="divider">/</span></li>
     <li class="active">Proyectos</li>
 </ul>
-<a href="<?php echo $this->url(array('module'=>'default','controller'=>'proyecto','action'=>'crear'),'',true);?>" class="btn btn-success btn-small pull-right abajo-bottom"><strong>CREAR PROYECTO</strong></a>
+<a href="<?php echo $this->url(array('module'=>'default','controller'=>'proyecto','action'=>'crear'),'',true);?>" class="btn btn-success btn-small pull-right abajo-bottom"><strong>CREAR PROYECTO</strong></a><br />
+<?php if($this->error) :?>
+    <div class="alert alert-error">
+        <a class="close" data-dismiss="alert" href="#">&times;</a>
+        <h2>¡Avispate!</h2>Este campo ya fue creado anteriormente.
+    </div> 
+    <div class="alert alert-error">
+        <a class="close" data-dismiss="alert" href="#">&times;</a>
+        <h2>¡Ups!</h2>No se pudo completar la operación. Verifica manualmente en la base de datos <strong><?php echo $this->datos->basededatos_empresa;?></strong> en la tabla <strong>#<?php echo $this->modulos->nombre_modulo_slug;?></strong>.
+    </div>    
+<?php elseif($this->exito) :?>   
+    <div class="alert alert-success">
+        <a class="close" data-dismiss="alert" href="#">&times;</a>
+        <h2>¡Seco!</h2>Se completo exitosamente la operación solicitada.</strong>
+    </div>        
+<?php endif;?> 
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
@@ -31,7 +46,7 @@
                         Proyecto <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#"><i class="icon-pencil"></i> Editar</a></li>
+                        <li><a href="#myModal<?php echo $retorno->id_empresa;?>" data-toggle="modal"><i class="icon-pencil"></i> Editar</a></li>
                     </ul>   
                     <a href="<?php echo $this->url(array('module'=>'default','controller'=>'proyecto','action'=>'modulo','id'=>$retorno->id_empresa),'',true);?>" class="btn"><i class="icon-folder-open"></i> Módulos</a> 
                     <a href="<?php echo $this->url(array('module'=>'default','controller'=>'proyecto','action'=>'relacion','id'=>$retorno->id_empresa),'',true);?>" class="btn"><i class="icon-refresh"></i> Relaciones</a>    
@@ -41,3 +56,15 @@
         <?php endforeach;?>
     </tbody>
 </table>
+<?php foreach($this->datos as $retorno) :?>    
+    <div class="modal" id="myModal<?php echo $retorno->id_empresa;?>" style="display: none">
+        <div class="modal-header">
+            <a href="#" class="close" data-dismiss="modal">×</a>
+            <h3>Modificaciones estado del proyecto</h3>
+            <h3><small>Esta opción se vera ejecutada al momento de entrar al CMS</small></h3>
+        </div>
+        <div class="modal-body">
+            <?php echo $this->formulario->populate(array('id_empresa'=>$retorno->id_empresa,'id_estado'=>$retorno->id_estado));?>
+        </div>
+    </div>  
+<?php endforeach;?>
