--- a/application/modules/default/views/scripts/proyecto/index.phtml
+++ b/application/modules/default/views/scripts/proyecto/index.phtml
@@ -4,21 +4,19 @@
     <li class="active">Proyectos</li>
 </ul>
 <a href="<?php echo $this->url(array('module'=>'default','controller'=>'proyecto','action'=>'crear'),'',true);?>" class="btn btn-success btn-small pull-right abajo-bottom"><strong>CREAR PROYECTO</strong></a><br />
-<?php if($this->error) :?>
-    <div class="alert alert-error">
-        <a class="close" data-dismiss="alert" href="#">&times;</a>
-        <h2>¡Avispate!</h2>Este campo ya fue creado anteriormente.
-    </div> 
-    <div class="alert alert-error">
-        <a class="close" data-dismiss="alert" href="#">&times;</a>
-        <h2>¡Ups!</h2>No se pudo completar la operación. Verifica manualmente en la base de datos <strong><?php echo $this->datos->basededatos_empresa;?></strong> en la tabla <strong>#<?php echo $this->modulos->nombre_modulo_slug;?></strong>.
-    </div>    
-<?php elseif($this->exito) :?>   
-    <div class="alert alert-success">
-        <a class="close" data-dismiss="alert" href="#">&times;</a>
-        <h2>¡Seco!</h2>Se completo exitosamente la operación solicitada.</strong>
-    </div>        
-<?php endif;?> 
+<div style="clear: both"></div>
+    
+    <?php if($this->error) :?>
+        <div class="alert alert-error">
+            <a class="close" data-dismiss="alert" href="#">&times;</a>
+            <h2>¡Avispate!</h2>Esta acción no se pudo ejecutar.
+        </div>   
+    <?php elseif($this->exito) :?>   
+        <div class="alert alert-success">
+            <a class="close" data-dismiss="alert" href="#">&times;</a>
+            <h2>¡Seco!</h2>Se completo exitosamente la operación solicitada.</strong>
+        </div>        
+    <?php endif;?> 
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
