--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -32,11 +32,14 @@
                                 Mantenedores<b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                                <li class="nav-header">Generales</li>
-                                <li><a href="#"><i class="icon-list-alt"></i> Tipos de modulo</a></li>
-                                <li><a href="#"><i class="icon-list-alt"></i> Estado de modulo</a></li>
-                                <li><a href="#"><i class="icon-list-alt"></i> Idiomas</a></li>
-                                <li><a href="#"><i class="icon-list-alt"></i> Componentes</a></li>
+                                <li class="nav-header">Generales</li>     
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'estado'),'',true);?>"><i class="icon-list-alt"></i> Estados</a></li>
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'idioma'),'',true);?>"><i class="icon-list-alt"></i> Idiomas</a></li>
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'componente'),'',true);?>"><i class="icon-list-alt"></i> Componentes</a></li>
+                                <li class="divider"></li>
+                                <li class="nav-header">Modulos</li>
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'cardinalidad'),'',true);?>"><i class="icon-list-alt"></i> Cardinalidad</a></li>                                
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'relacion'),'',true);?>"><i class="icon-list-alt"></i> Relación</a></li>                                
                                 <li class="divider"></li>
                                 <li class="nav-header">#campo</li>
                                 <li><a href="#"><i class="icon-list-alt"></i> Tipos</a></li>
@@ -56,7 +59,7 @@
         <div style="clear: both"></div>
         <div class="row-fluid footer">
             <div class="pull-right creditos">
-                <strong>PYME</strong> 0.1 BETA - Desarrollo Área Digital
+                <strong>PYME</strong> 0.1 BETA - Desarrollo Área Digital - <a href="<?php echo $this->url(array('module'=>'default','controller'=>'tablero','action'=>'actualizaciones'),'',true);?>">Actualizaciones</a>
             </div>
         </div>
     </div>
