--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -42,11 +42,11 @@
                                 <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'relacion'),'',true);?>"><i class="icon-list-alt"></i> Relación</a></li>                                
                                 <li class="divider"></li>
                                 <li class="nav-header">#campo</li>
-                                <li><a href="#"><i class="icon-list-alt"></i> Tipos</a></li>
-                                <li><a href="#"><i class="icon-list-alt"></i> Validaciones</a></li>
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'tipos'),'',true);?>"><i class="icon-list-alt"></i> Tipos</a></li>
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'validacion'),'',true);?>"><i class="icon-list-alt"></i> Validaciones</a></li>
                                 <li class="divider"></li>
                                 <li class="nav-header">#usuario</li>
-                                <li><a href="#"><i class="icon-list-alt"></i> Tipos</a></li>
+                                <li><a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'usuariotipo'),'',true);?>"><i class="icon-list-alt"></i> Tipos</a></li>
                             </ul> 
                         </li>
                         <li class="divider-vertical"></li>                         
