--- a/application/modules/default/views/scripts/mantenedor/index.phtml
+++ b/application/modules/default/views/scripts/mantenedor/index.phtml
@@ -10,8 +10,8 @@
     <a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'cardinalidad'),'',true);?>">Cardinalidad</a><br />
     <a href="#">Relación</a><br /><br />
     <strong>#Campo</strong><br />
-    <a href="#">Tipos</a><br />
-    <a href="#">Validaciones</a><br /><br />
+    <a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'tipos'),'',true);?>">Tipos</a><br />
+    <a href="<?php echo $this->url(array('module'=>'default','controller'=>'mantenedor','action'=>'validacion'),'',true);?>">Validaciones</a><br /><br />
     <strong>#Usuario</strong><br />
     <a href="#">Tipos</a><br />
 </div>
