--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -59,7 +59,7 @@
         <div style="clear: both"></div>
         <div class="row-fluid footer">
             <div class="pull-right creditos">
-                <strong>PYME</strong> 0.1 BETA - Desarrollo Área Digital - <a href="<?php echo $this->url(array('module'=>'default','controller'=>'tablero','action'=>'actualizaciones'),'',true);?>">Actualizaciones</a>
+                <strong>PYME</strong> 0.1 BETA - Desarrollo Área Digital - <a href="https://github.com/cijonathan/pyme/commits/master" target="_blank">Actualizaciones</a>
             </div>
         </div>
     </div>  
