--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -59,7 +59,7 @@
         <div style="clear: both"></div>
         <div class="row-fluid footer">
             <div class="pull-right creditos">
-                <strong>PYME</strong> 0.2 BETA - Desarrollo Área Digital - <a href="https://github.com/cijonathan/pyme/commits/master" target="_blank">Actualizaciones</a>
+                <strong>PYME <em>0.1.1</em></strong> - Desarrollo Área Digital - <a href="https://github.com/cijonathan/pyme/commits/master" target="_blank">Actualizaciones</a>
             </div>
         </div>
     </div>  
